feat: implement review api, add base repository
